# DynamicalSystemFramework

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: benchmark_release.yml  binding.yml  clang_format.yml  cmake_examples.yml  cmake_tests.yml  codacy.yml  codeql.yml  flawfinder.yml  pypi.yml  pytest.yml  ruff.yml  zenodo.yml
benchmark/: Bench_Dynamics.cpp  Bench_Network.cpp
docs/: annotated.html  annotated_dup.js  classdsf_1_1Dynamics-members.html  classdsf_1_1Dynamics.html  classdsf_1_1Dynamics.js  classdsf_1_1Edge-members.html  classdsf_1_1Edge.html  classdsf_1_1Edge.js  classdsf_1_1Network-members.html  classdsf_1_1Network.html  classdsf_1_1Network.js  classdsf_1_1Node-members.html  classdsf_1_1Node.html  classdsf_1_1Node.js  classdsf_1_1PathCollection-members.html  classdsf_1_1PathCollection.html  classdsf_1_1PathCollection.js  classdsf_1_1mobility_1_1CSVWriter-members.html  classdsf_1_1mobility_1_1CSVWriter.html  classdsf_1_1mobility_1_1CSVWriter.js  classdsf_1_1mobility_1_1FirstOrderDynamics-members.html  classdsf_1_1mobility_1_1FirstOrderDynamics.html  classdsf_1_1mobility_1_1FirstOrderDynamics.js  classdsf_1_1mobility_1_1Intersection-members.html  classdsf_1_1mobility_1_1Intersection.html  classdsf_1_1mobility_1_1Itinerary.html  classdsf_1_1mobility_1_1Road-members.html  classdsf_1_1mobility_1_1Road.html  classdsf_1_1mobility_1_1Road.js  classdsf_1_1mobility_1_1RoadJunction-members.html  classdsf_1_1mobility_1_1RoadJunction.html  classdsf_1_1mobility_1_1RoadNetwork-members.html  classdsf_1_1mobility_1_1RoadNetwork.html  classdsf_1_1mobility_1_1RoadNetwork.js  classdsf_1_1mobility_1_1Roundabout-members.html  classdsf_1_1mobility_1_1Roundabout.html  classdsf_1_1mobility_1_1Station-members.html  classdsf_1_1mobility_1_1Station.html  classdsf_1_1mobility_1_1Street-members.html  classdsf_1_1mobility_1_1Street.html  (+73 more)
docs/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_8.js  classes_b.js  classes_c.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_14.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_f.js  searchdata.js
examples/: CMakeLists.txt  sample_sim_config.json  simulate_city.py  simulate_city_with_simulator.py  simulate_grid.py  slow_charge_rb.cpp  slow_charge_tl.cpp  stalingrado.cpp
profiling/: CMakeLists.txt  main.cpp  parse_massif.cpp
src/dsf/: __init__.py  bindings.cpp  dsf.hpp
src/dsf/base/: Dynamics.hpp  Edge.cpp  Edge.hpp  Network.hpp  Node.hpp  PathCollection.cpp  PathCollection.hpp
src/dsf/cartography/: __init__.py  cartography.py
src/dsf/mobility/: FirstOrderDynamics.cpp  FirstOrderDynamics.hpp  Itinerary.hpp  Road.hpp  RoadNetwork.cpp  RoadNetwork.hpp  Street.cpp  Street.hpp  TrafficLight.cpp  TrafficLight.hpp  TrafficSimulator.cpp  TrafficSimulator.hpp
src/dsf/utility/: Typedef.hpp  progress_bar.hpp
test/bindings/: Test_bindings_core.py  Test_bindings_mdt.py  Test_bindings_mobility.py  conftest.py
test/data/: ods_od_pairs.csv  ods_random_ods.csv
test/mobility/: Test_dynamics.cpp  Test_graph.cpp  Test_itinerary.cpp  Test_street.cpp  Test_traffic_simulator.cpp
